--- a/docs/public/installing-odo.adoc
+++ b/docs/public/installing-odo.adoc
@@ -2,16 +2,16 @@
 
 The following section describes how to install `odo` on different platforms using the CLI.
 
-= Installing v2.0.0-alpha-2 of odo
+= Installing v2.0.0-beta-1 of odo
 
-v2.0.0-alpha-2 of odo uses **devfile** as its default deployment mechanism.
+v2.0.0-beta-1 of odo uses **devfile** as its default deployment mechanism.
 
 == Installing odo on Linux
 
 === Binary installation
 
 ----
-# curl -L https://github.com/openshift/odo/releases/download/v2.0.0-alpha-2/odo-linux-amd64 -o /usr/local/bin/odo
+# curl -L https://github.com/openshift/odo/releases/download/v2.0.0-beta-1/odo-linux-amd64 -o /usr/local/bin/odo
 # chmod +x /usr/local/bin/odo
 ----
 
@@ -20,7 +20,7 @@ v2.0.0-alpha-2 of odo uses **devfile** as its default deployment mechanism.
 === Binary installation
 
 ----
-# curl -L https://github.com/openshift/odo/releases/download/v2.0.0-alpha-2/odo-darwin-amd64 -o /usr/local/bin/odo
+# curl -L https://github.com/openshift/odo/releases/download/v2.0.0-beta-1/odo-darwin-amd64 -o /usr/local/bin/odo
 # chmod +x /usr/local/bin/odo
 ----
 
@@ -28,7 +28,7 @@ v2.0.0-alpha-2 of odo uses **devfile** as its default deployment mechanism.
 
 === Binary installation
 
-. Download the latest link:https://github.com/openshift/odo/releases/download/v2.0.0-alpha-2/odo-windows-amd64.exe[`odo.exe`] file.
+. Download the latest link:https://github.com/openshift/odo/releases/download/v2.0.0-beta-1/odo-windows-amd64.exe[`odo.exe`] file.
 . Add the location of your `odo.exe` to your `GOPATH/bin` directory.
 
 === Setting the `PATH` variable for Windows 10
