--- a/docs/public/installing-odo.adoc
+++ b/docs/public/installing-odo.adoc
@@ -2,9 +2,7 @@
 
 The following section describes how to install `odo` on different platforms via CLI as well as IDEs.
 
-= Installing the odo command-line tool (v2.0.0-beta-1)
-
-v2.0.0-beta-1 of odo uses **devfile** as its default deployment mechanism.
+= Installing the odo CLI tool (latest)
 
 == Installing odo on Linux
 
@@ -12,8 +10,8 @@ v2.0.0-beta-1 of odo uses **devfile** as its default deployment mechanism.
 
 [source,sh]
 ----
-  # curl -L https://github.com/openshift/odo/releases/download/v2.0.0-beta-1/odo-linux-amd64 -o /usr/local/bin/odo
-  # chmod +x /usr/local/bin/odo
+  $ curl -L https://mirror.openshift.com/pub/openshift-v4/clients/odo/latest/odo-linux-amd64 -o /usr/local/bin/odo
+  $ chmod +x /usr/local/bin/odo
 ----
 
 == Installing odo on macOS
@@ -22,15 +20,15 @@ v2.0.0-beta-1 of odo uses **devfile** as its default deployment mechanism.
 
 [source,sh]
 ----
-  # curl -L https://github.com/openshift/odo/releases/download/v2.0.0-beta-1/odo-darwin-amd64 -o /usr/local/bin/odo
-  # chmod +x /usr/local/bin/odo
+  $ curl -L https://mirror.openshift.com/pub/openshift-v4/clients/odo/latest/odo-darwin-amd64 -o /usr/local/bin/odo
+  $ chmod +x /usr/local/bin/odo
 ----
 
 == Installing odo on Windows
 
 === Binary installation
 
-. Download the latest link:https://github.com/openshift/odo/releases/download/v2.0.0-beta-1/odo-windows-amd64.exe[`odo.exe`] file.
+. Download the latest link:https://mirror.openshift.com/pub/openshift-v4/clients/odo/latest/odo-windows-amd64.exe[`odo.exe`] file.
 . Add the location of your `odo.exe` to your `GOPATH/bin` directory.
 
 === Setting the `PATH` variable for Windows 10
